--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Josefin+Sans:ital,wght@0,200;1,200&family=Merriweather:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,15 +16,7 @@
         <a href="./accounting.html">accounting page</a>
 
     </header>
-    <p id="demo"></p>
-    <p id="demo1"></p>
-    <p id="demo2"></p>
-    <p id="demo3"></p>
-    <p id="demo4"></p>
-    <p id="demo5"></p>
-    <p id="demo6"></p>
-    
-
+ 
     <footer>
         <p>&copy; Anfalqa. All Rights Reserved.</p>
     </footer>
