--- a/accounting.html
+++ b/accounting.html
@@ -5,6 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            color: #FA7070;
+        }
+        header {
+            padding: 40px;
+            text-align: center;
+            background: #A1C298;
+            font-size: 30px;
+            
+            }
+        footer{
+            padding: 20px;
+            text-align: center;
+            background: #A1C298;
+            font-size: 10px;
+            margin-top: 400px;
+        }
+    
+        a:link, a:visited {
+      text-decoration: none ;
+      color: #FA7070;
+      }
+
+   </style>
 </head>
 <body>
     <header>
