--- a/index.html
+++ b/index.html
@@ -8,19 +8,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Josefin+Sans:ital,wght@0,200;1,200&family=Merriweather:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <style>
+
+    header {
+        padding: 40px;
+        text-align: center;
+        background: #A1C298;
+        font-size: 30px;
+        
+        }
+    footer{
+        padding: 20px;
+        text-align: center;
+        background: #A1C298;
+        font-size: 10px;
+    }
+
+    a:link, a:visited {
+  text-decoration: none ;
+  color: #FA7070;
+  
+
+}
+
+    </style>
 </head>
 <body>
     <header>
         <h1>HR management system</h1>
-        <a href="./index.html">Home</a>
-        <a href="./accounting.html">accounting page</a>
+        <a href="./index.html">Home      </a>
+        <a href="./accounting.html">     accounting page</a>
 
     </header>
- 
+    <script src="./js/app.js"></script>
     <footer>
         <p>&copy; Anfalqa. All Rights Reserved.</p>
+        <a href="tel:+962069999999">+962 06 999 99</a> 
     </footer>
 
-    <script src="./js/app.js"></script>
+    
 </body>
 </html>
