--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <a href="./accounting.html">     accounting page</a>
 
     </header>
+    <p id="demo"></p>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
+    <p id="demo3"></p>
+    <p id="demo4"></p>
+    <p id="demo5"></p>
+    <p id="demo6"></p>
+    
+
     <script src="./js/app.js"></script>
     <footer>
         <p>&copy; Anfalqa. All Rights Reserved.</p>
